[feat-playlist tracks] tracks for given playlist